syntax = "proto3";

package protocol;

option go_package = "github.com/Roarcannotprogramming/clipipe/service/clip/protocol";

service Clip {
    rpc Ping (PingRequest) returns (PingResponse) {}
    rpc Push (PushRequest) returns (PushResponse) {}
    rpc PushGetStream (ConnRequest) returns (stream MsgResponse) {}
}

message Status {
    int32 code = 1;
    string message = 2;
}

message PingRequest {
    string id = 1;
    Status status = 2;
}

message PingResponse {
    string id = 1;
    Status status = 2;
}

message PushRequest {
    string id = 1;
    Status status = 2;
    string msg = 3;
}

message PushResponse {
    string id = 1;
    Status status = 2;
}

message ConnRequest {
    string id = 1;
    Status status = 2;
}

message MsgResponse {
    string id = 1;
    Status status = 2;
    string msg = 3;
}
